fix: padding on small screens

--- a/styles/App.module.css
+++ b/styles/App.module.css
@@ -5,6 +5,7 @@
   min-height: 100vh;
   background-color: var(--color-background);
   color: var(--color-text);
+  padding: 32px 16px 64px 16px;
 }
 
 .containerInner {
@@ -14,8 +15,6 @@
   justify-content: space-between;
   width: 100%;
   max-width: 960px;
-  padding: 32px 16px 16px 16px;
-  padding-bottom: 64px;
 }
 
 .header {
