--- a/styles/_global.css
+++ b/styles/_global.css
@@ -1,4 +1,3 @@
-html,
 body {
   padding: 0;
   margin: 0;
@@ -8,9 +7,7 @@ body {
   font-size: 20px;
   line-height: 1.4;
   transition: all 0.2s linear;
-}
 
-body {
   box-sizing: border-box;
 
   --color-text: hsl(12, 5%, 4%);
